--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorDenied">#d50000</color>
     <color name="colorAllow">#64dd17</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
