--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -1,31 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScanActivity"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    tools:context=".activity.ScanActivity">
 
     <SurfaceView
         android:id="@+id/camera"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"/>
+        android:layout_height="match_parent" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorWhite" />
-
-    <TextView
-        android:id="@+id/status_message"
-        android:textAlignment="center"
-        android:padding="20dp"
-        android:visibility="gone"
-        android:textColor="@color/colorWhite"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp" />
+        android:visibility="visible"
+        android:padding="15dp"
+        android:id="@+id/status_message">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/status_message_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/colorWhite" />
+
+        <ImageView
+            android:id="@+id/status_message_picture"
+            android:layout_gravity="end|center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite"
+        android:orientation="horizontal"
+        android:layout_gravity="bottom"
+        android:paddingLeft="5dp"
+        android:paddingTop="3dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="3dp">
+
+        <EditText
+            android:id="@+id/manually_edit"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/background"
+            android:hint="Код"
+            android:textSize="17sp"
+            android:inputType="number"
+            android:padding="12dp" />
+
+        <Button
+            android:id="@+id/manually_submit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:background="@drawable/background"
+            android:padding="12dp"
+            android:text="Надіслати"
+            android:textSize="17sp"
+            android:textStyle="normal" />
+
+    </LinearLayout>
+
+</FrameLayout>
