--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,9 +4,13 @@
 
     <item
         android:id="@+id/app_bar_search"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="Search"
+        android:title="Пошук"
         app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/app_bar_settings"
+        android:icon="@drawable/steam"
+        android:title="Налаштування"
+        app:showAsAction="never|withText" />
 
 </menu>
