--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorDenied">#d50000</color>
-    <color name="colorAllow">#64dd17</color>
+    <color name="colorDenied">#D32F2F</color>
+    <color name="colorAllow">#388E3C</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorYellow">#FBC02D</color>
 </resources>
